2003-07-02  Dan Winship  <danw@ximian.com>

	* cal-client/cal-client.c (real_open_calendar): Don't leak
	exceptions
	(load_static_capabilities): free the capability string

	* gui/dialogs/task-page.c (task_page_fill_component): Free the
	description text if it *was* set, rather than if it wasn't.

	* gui/dialogs/task-editor.c (task_editor_finalize): Free the priv
	struct.

2003-07-02  Bolian Yin <bolian.yin@sun.com>
                                                                                
        Fixes #45328, #45329
                                                                                
        * gui/e-day-view.c (e_day_view_do_key_press): Do not process
        PageUp/PageDown, .. when the Alt key is pressed (give key binding
        set the chance).
        * gui/gnome-cal.h : define new enum type, GNOME_CAL_GOTO_DATE_TYPE.
        * gui/gnome-cal.c (gnome_calendar_class_init): define new signal
         "goto_date".  Add key bindings for "Alt+PageUp/PageDown",
         "Alt+Home/End".
        (gnome_calendar_goto_date): Impl. signal handler for "goto_date".
                                                                                
2003-07-01  Rodrigo Moya <rodrigo@ximian.com>

	Fixes #45524

	* gui/calendar-commands.c: use stock icons where approppriate.

	* gui/tasks-control.c: removed EPixmaps structure, since we only use
	stock icons now.
	(tasks_control_activate): no need to call e_pixmaps_update.

2003-07-01  Bolian Yin <bolian.yin@sun.com>

	Fixes #45274

	* gui/e-week-view.c: implemented tabbing though events in week view.

2003-06-27  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/send-comp.[ch] (send_component_dialog):
	* gui/dialogs/cancel-comp.[ch] (cancel_component_dialog): added a
	GtkWindow argument for callers to specify the parent window.

	* gui/dialogs/changed-comp.[ch] (changed_component_dialog): added
	'parent' argument and use GtkMessageDialog instead of
	gnome_question_dialog.
